--- a/Android_Interview_Prep_App/app/src/main/res/layout/activity_main.xml
+++ b/Android_Interview_Prep_App/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,7 @@
     android:background="#F5F4F4"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
-
+    <androidx.cardview.widget.CardView
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -42,10 +41,10 @@
                 android:gravity="center_horizontal"/>
 
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
- <android.support.v7.widget.CardView
+ <androidx.cardview.widget.CardView
      android:layout_margin="8dp"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
@@ -58,7 +57,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"/>
- </android.support.v7.widget.CardView>
+
+ </androidx.cardview.widget.CardView>
 
 
 
