Revamped The Native Java Module.

--- a/Interview_Prep__App/native_java/src/main/res/layout/activity_main.xml
+++ b/Interview_Prep__App/native_java/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dreams.androidquizapp.MainActivity"
+    tools:context="com.dreams.androidquizapp.ui.main.MainActivity"
     android:background="#F5F4F4"
     android:orientation="vertical">
 
