--- a/Interview_Prep_App/native_java/retrofit/src/main/res/layout/activity_main.xml
+++ b/Interview_Prep_App/native_java/retrofit/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.dreams.interviewprepapp.ui.main.MainActivity"
-    android:background="#F5F4F4"
+    android:background="@color/secondaryDarkColor"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -17,49 +17,45 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         app:cardElevation="8dp"
-        app:cardCornerRadius="10dp"
-        app:cardBackgroundColor="@color/primaryColor">
+        app:cardCornerRadius="14dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@drawable/app_gradient">
+
             <TextView
-                android:gravity="center_horizontal"
+                android:id="@+id/title_tv"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="42dp"
+                android:gravity="center_horizontal"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/primaryTextColor"
+                android:textSize="24sp"
                 android:text="ANDROID QUIZ"
-                android:id="@+id/title_tv"/>
+                android:textStyle="bold"/>
             <TextView
                 android:layout_margin="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/primaryTextColor"
+                android:textSize="24sp"
                 android:text="Score: "
                 android:id="@+id/score_tv"
+                android:textStyle="bold"
                 android:gravity="center_horizontal"/>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-
- <androidx.cardview.widget.CardView
-     android:layout_margin="8dp"
-     android:layout_width="match_parent"
-     android:layout_height="match_parent"
-     app:cardBackgroundColor="#BEBEBE"
-     app:cardElevation="8dp"
-     app:cardCornerRadius="10dp">
-
     <LinearLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"/>
- </androidx.cardview.widget.CardView>
-
-
+        android:layout_margin="8dp"
+        android:background="@drawable/secondary_gradient"
+        android:orientation="vertical"
+        android:elevation="8dp"/>
 
 </LinearLayout>
