--- a/Interview_Prep_App/native_java/retrofit/src/main/res/layout/fragment_question.xml
+++ b/Interview_Prep_App/native_java/retrofit/src/main/res/layout/fragment_question.xml
@@ -5,25 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#F5F4F4"
     tools:context="com.dreams.interviewprepapp.ui.questions.QuestionFragment">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/primaryColor"
         android:layout_margin="8dp"
-        app:cardCornerRadius="10dp"
+        app:cardCornerRadius="14dp"
+        android:background="@drawable/app_gradient"
         app:cardElevation="8dp"
         android:elevation="8dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/primaryColor">
 
         <TextView
+            android:background="@drawable/app_gradient"
             android:id="@+id/question"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
@@ -33,7 +29,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/primaryTextColor"
             android:textStyle="bold"/>
-    </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -44,247 +40,129 @@
         android:elevation="8dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="8dp"
-        app:cardBackgroundColor="@color/cardview_light_background">
+        app:cardBackgroundColor="@color/secondaryLightColor">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/frameLayout"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:orientation="vertical">
+                android:layout_height="wrap_content">
 
-                <LinearLayout
+                <RadioGroup
+                    android:id="@+id/radio_group_answers"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toTopOf="@+id/submitButton"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_chainStyle="packed">
 
-
-                        <LinearLayout
-                            android:id="@+id/answer_a_layout"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="5dp"
-                            android:layout_marginTop="5dp"
-                            android:orientation="horizontal">
-
-
-                            <TextView
-                                android:id="@+id/answer_a_head"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="A"
-                                android:textAppearance="?android:attr/textAppearanceLarge"
-                                android:textColor="@color/primaryColor"
-                                android:textStyle="bold"/>
-
-                            <View
-                                android:layout_width="1dp"
-                                android:layout_height="match_parent"
-                                android:background="#fff"/>
-
-                            <TextView
-                                android:id="@+id/answer_a_summary"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="5dp"
-                                android:text="The answer is A."
-                                android:textColor="@color/primaryTextColor"
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textStyle="bold"/>
-
-                        </LinearLayout>
-                        <TextView
-                            android:id="@+id/answer_a_details"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginLeft="15dp"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:textColor="@color/primaryTextColor"
-                            android:visibility="gone"/>
-
-
-
-
-                    <LinearLayout
+                    <RadioButton
+                        android:id="@+id/radio_button_answer_a"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                        <LinearLayout
-                            android:id="@+id/answer_b_layout"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="5dp"
-                            android:layout_marginTop="5dp"
-                            android:orientation="horizontal">
+                        android:layout_marginBottom="14dp"
+                        android:background="@drawable/radio_background"
+                        android:button="@null"
+                        android:drawablePadding="16dp"
+                        android:minHeight="80dp"
+                        android:paddingStart="16dp"
+                        android:paddingTop="24dp"
+                        android:paddingEnd="16dp"
+                        android:paddingBottom="24dp"
+                        android:text="The answer is A"
+                        android:textColor="@color/secondaryTextColor"
+                        android:textSize="16sp"/>
 
-                            <TextView
-                                android:id="@+id/answer_b_head"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="B"
-                                android:textAppearance="?android:attr/textAppearanceLarge"
-                                android:textColor="@color/primaryColor"
-                                android:textStyle="bold"
-                                />
-
-                            <View
-                                android:layout_width="1dp"
-                                android:layout_height="match_parent"
-                                android:background="#fff"/>
-
-                            <TextView
-
-                                android:id="@+id/answer_b_summary"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="5dp"
-                                android:text="The answer is B."
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textColor="@color/primaryTextColor"
-                                android:textStyle="bold"
-                                />
-
-                        </LinearLayout>
-                        <TextView
-                            android:id="@+id/answer_b_details"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginLeft="15dp"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:textColor="@color/primaryTextColor"
-                            android:visibility="gone"/>
-                    </LinearLayout>
-                    <LinearLayout
+                    <RadioButton
+                        android:id="@+id/radio_button_answer_b"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                        <LinearLayout
-                            android:id="@+id/answer_c_layout"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginBottom="5dp"
-                            android:orientation="horizontal">
+                        android:layout_marginBottom="14dp"
+                        android:background="@drawable/radio_background"
+                        android:button="@null"
+                        android:drawablePadding="16dp"
+                        android:minHeight="80dp"
+                        android:paddingStart="16dp"
+                        android:paddingTop="24dp"
+                        android:paddingEnd="16dp"
+                        android:paddingBottom="24dp"
+                        android:text="The answer is B"
+                        android:textColor="@color/secondaryTextColor"
+                        android:textSize="16sp"/>
 
-
-                            <TextView
-                                android:id="@+id/answer_c_head"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="C"
-                                android:textAppearance="?android:attr/textAppearanceLarge"
-                                android:textColor="@color/primaryColor"
-                                android:textStyle="bold"
-                                />
-
-                            <View
-                                android:layout_width="1dp"
-                                android:layout_height="match_parent"
-                                android:background="#fff"/>
-
-                            <TextView
-
-                                android:id="@+id/answer_c_summary"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="5dp"
-                                android:text="The answer is A."
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textColor="@color/primaryTextColor"
-                                android:textStyle="bold"
-                                />
-
-                        </LinearLayout>
-                        <TextView
-                            android:id="@+id/answer_c_details"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginLeft="15dp"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:textColor="@color/primaryTextColor"
-                            android:visibility="gone"/>
-                    </LinearLayout>
-                    <LinearLayout
+                    <RadioButton
+                        android:id="@+id/radio_button_answer_c"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                        <LinearLayout
-                            android:id="@+id/answer_d_layout"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginBottom="5dp">
+                        android:layout_marginBottom="14dp"
+                        android:background="@drawable/radio_background"
+                        android:button="@null"
+                        android:drawablePadding="16dp"
+                        android:minHeight="80dp"
+                        android:paddingStart="16dp"
+                        android:paddingTop="24dp"
+                        android:paddingEnd="16dp"
+                        android:paddingBottom="24dp"
+                        android:text="The Answer is C"
+                        android:textColor="@color/secondaryTextColor"
+                        android:textSize="16sp"/>
 
+                    <RadioButton
+                        android:id="@+id/radio_button_answer_d"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="14dp"
+                        android:background="@drawable/radio_background"
+                        android:button="@null"
+                        android:drawablePadding="16dp"
+                        android:minHeight="80dp"
+                        android:paddingStart="16dp"
+                        android:paddingTop="24dp"
+                        android:paddingEnd="16dp"
+                        android:paddingBottom="24dp"
+                        android:text="The answer is D"
+                        android:textColor="@color/secondaryTextColor"
+                        android:textSize="16sp"/>
+                </RadioGroup>
 
-                            <TextView
-                                android:id="@+id/answer_d_head"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="D"
-                                android:textAppearance="?android:attr/textAppearanceLarge"
-                                android:textColor="@color/primaryColor"
-                                android:textStyle="bold"
-                                />
-
-                            <View
-                                android:layout_width="1dp"
-                                android:layout_height="match_parent"
-                                android:background="#fff"/>
-
-                            <TextView
-                                android:id="@+id/answer_d_summary"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="5dp"
-                                android:text="The answer is A."
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textColor="@color/primaryTextColor"
-                                android:textStyle="bold"/>
-                        </LinearLayout>
-                        <TextView
-                            android:id="@+id/answer_d_details"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginLeft="15dp"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:textColor="@color/primaryTextColor"
-                            android:visibility="gone"/>
-                    </LinearLayout>
-                </LinearLayout>
-            </LinearLayout>
+                <Button
+                    android:id="@+id/submitButton"
+                    android:layout_width="270dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/radio_group_answers"
+                    app:layout_constraintVertical_bias=".5"
+                    android:shadowColor="#A8A8A8"
+                    android:shadowDx="0"
+                    android:shadowDy="0"
+                    android:shadowRadius="5"
+                    android:textColor="#000000"
+                    android:textSize="24sp"
+                    android:background="@drawable/submit_button_background"
+                    android:text="@string/submit_button" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
-
     </androidx.cardview.widget.CardView>
-    <RelativeLayout
-        android:layout_width="match_parent"
+
+
+    <Button
+        android:id="@+id/newQuizBtn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        >
+        android:layout_gravity="end|bottom"
+        android:textColor="@color/primaryTextColor"
+        android:background="@drawable/radio_bordered_background"
+        android:backgroundTint="@color/primaryLightColor"
+        android:text="@string/question_new_quiz" />
 
-        <Button
-            android:id="@+id/newQuizBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:background="@color/primaryColor"
-            android:textColor="@color/primaryTextColor"
-            android:text="@string/question_new_quiz"/>
-
-        <Button
-            android:id="@+id/nextBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:background="@color/primaryLightColor"
-            android:textColor="@color/primaryTextColor"
-            android:text="@string/question_next"/>
-
-    </RelativeLayout>
 </LinearLayout>
