--- a/Interview_Prep_App/native_java/retrofit/src/main/res/values/colors.xml
+++ b/Interview_Prep_App/native_java/retrofit/src/main/res/values/colors.xml
@@ -3,9 +3,17 @@
     <color name="primaryColor">#fdd835</color>
     <color name="primaryLightColor">#ffff6b</color>
     <color name="primaryDarkColor">#c6a700</color>
-    <color name="secondaryColor">#9c27b0</color>
-    <color name="secondaryLightColor">#d05ce3</color>
-    <color name="secondaryDarkColor">#6a0080</color>
-    <color name="primaryTextColor">#000000</color>
-    <color name="secondaryTextColor">#ffffff</color>
+    <color name="secondaryColor">#b6d0e2</color>
+    <color name="secondaryLightColor">#e9ffff</color>
+    <color name="secondaryDarkColor">#869fb0</color>
+    <color name="primaryTextColor">#36454f</color>
+    <color name="secondaryTextColor">#36454f</color>
+    <color name="light_gray">#DDDDDD</color>
+    <color name="bright_green">#6DCD19</color>
+    <color name="bright_red">#DC1414</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
+    <color name="light_blue_A200">#FF40C4FF</color>
+    <color name="light_blue_A400">#FF00B0FF</color>
+    <color name="black_overlay">#66000000</color>
 </resources>
