--- a/Interview_Prep_App/native_java/retrofit/src/main/res/values/styles.xml
+++ b/Interview_Prep_App/native_java/retrofit/src/main/res/values/styles.xml
@@ -7,5 +7,9 @@
         <item name="colorPrimaryDark">@color/primaryDarkColor</item>
         <item name="colorAccent">@color/secondaryColor</item>
     </style>
+    <style name="Widget.AppTheme.ButtonBar.Fullscreen" parent="">
+        <item name="android:background">@color/black_overlay</item>
+        <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
+    </style>
 
 </resources>
