Updated the Kotlin Base Project Added a shared resource file

--- a/Interview_Prep_App/native_kotlin/base/src/main/res/layout/fragment_question.xml
+++ b/Interview_Prep_App/native_kotlin/base/src/main/res/layout/fragment_question.xml
@@ -1,67 +1,67 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5F4F4"
     android:orientation="vertical"
-    tools:context="com.nudennie.interviewprepapp.fragments.QuestionFragment">
+    tools:context=".ui.questions.QuestionFragment">
 
-    <RelativeLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:cardCornerRadius="14dp"
+        android:background="@drawable/app_gradient"
+        app:cardElevation="8dp"
+        android:elevation="8dp">
 
-        <Button
-            android:id="@+id/newQuizBtn"
-            android:layout_width="wrap_content"
+        <TextView
+            android:background="@drawable/app_gradient"
+            android:id="@+id/question"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="What Is An Activity?"
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/primaryTextColor"
-            android:background="@color/primaryColor"
-            android:text="@string/question_new_quiz" />
+            android:textStyle="bold"/>
 
-        <Button
-            android:id="@+id/nextBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:textColor="@color/primaryTextColor"
-            android:background="@color/primaryLightColor"
-            android:text="@string/question_next" />
-
-    </RelativeLayout>
+    </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:layout_margin="8dp"
+        android:layout_weight="1"
         android:elevation="8dp"
-        app:cardBackgroundColor="@color/cardview_light_background"
         app:cardCornerRadius="10dp"
-        app:cardElevation="8dp">
+        app:cardElevation="8dp"
+        app:cardBackgroundColor="@color/secondaryLightColor">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/frameLayout"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:orientation="vertical">
+                android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:visibility="visible"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="vertical">
                 <RadioGroup
                     android:id="@+id/radio_group_answers"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toTopOf="@+id/submitButton"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_chainStyle="packed">
 
                     <RadioButton
                         android:id="@+id/radio_button_answer_a"
@@ -77,7 +77,7 @@
                         android:paddingEnd="16dp"
                         android:paddingBottom="24dp"
                         android:text="The answer is A"
-                        android:textColor="@color/secondaryLightColor"
+                        android:textColor="@color/secondaryTextColor"
                         android:textSize="16sp"/>
 
                     <RadioButton
@@ -94,7 +94,7 @@
                         android:paddingEnd="16dp"
                         android:paddingBottom="24dp"
                         android:text="The answer is B"
-                        android:textColor="@color/secondaryLightColor"
+                        android:textColor="@color/secondaryTextColor"
                         android:textSize="16sp"/>
 
                     <RadioButton
@@ -111,7 +111,7 @@
                         android:paddingEnd="16dp"
                         android:paddingBottom="24dp"
                         android:text="The Answer is C"
-                        android:textColor="@color/secondaryLightColor"
+                        android:textColor="@color/secondaryTextColor"
                         android:textSize="16sp"/>
 
                     <RadioButton
@@ -128,250 +128,41 @@
                         android:paddingEnd="16dp"
                         android:paddingBottom="24dp"
                         android:text="The answer is D"
-                        android:textColor="@color/secondaryLightColor"
+                        android:textColor="@color/secondaryTextColor"
                         android:textSize="16sp"/>
                 </RadioGroup>
-            </LinearLayout>
-                <LinearLayout
-                    android:visibility="gone"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
 
-
-
-                    <LinearLayout
-                        android:id="@+id/answer_a_layout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:orientation="horizontal">
-
-
-                        <TextView
-                            android:id="@+id/answer_a_head"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceLarge"
-                            android:textColor="@color/primaryColor"
-                            android:textStyle="bold"
-                            android:text="A" />
-
-                        <TextView
-                            android:id="@+id/answer_a_summary"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:textColor="@color/primaryTextColor"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:textStyle="bold"
-                            android:text="The answer is A." />
-
-                        <View
-                            android:layout_width="1dp"
-                            android:layout_height="match_parent"
-                            android:background="#fff" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <LinearLayout
-                            android:id="@+id/answer_b_layout"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginBottom="5dp"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:id="@+id/answer_b_head"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textAppearance="?android:attr/textAppearanceLarge"
-                                android:textColor="@color/primaryColor"
-                                android:textStyle="bold"
-                                android:text="B" />
-
-                            <TextView
-
-                                android:id="@+id/answer_b_summary"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="5dp"
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textColor="@color/primaryTextColor"
-                                android:textStyle="bold"
-                                android:text="The answer is B." />
-
-                            <View
-                                android:layout_width="1dp"
-                                android:layout_height="match_parent"
-                                android:background="#fff" />
-
-                        </LinearLayout>
-
-                        <TextView
-                            android:id="@+id/answer_b_details"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginLeft="15dp"
-                            android:visibility="gone"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:textColor="@color/primaryTextColor" />
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <LinearLayout
-                            android:id="@+id/answer_c_layout"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginBottom="5dp"
-                            android:orientation="horizontal">
-
-
-                            <TextView
-                                android:id="@+id/answer_c_head"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textAppearance="?android:attr/textAppearanceLarge"
-                                android:textColor="@color/primaryColor"
-                                android:textStyle="bold"
-                                android:text="C" />
-
-                            <TextView
-
-                                android:id="@+id/answer_c_summary"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="5dp"
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textColor="@color/primaryTextColor"
-                                android:textStyle="bold"
-                                android:text="The answer is A." />
-
-                            <View
-                                android:layout_width="1dp"
-                                android:layout_height="match_parent"
-                                android:background="#fff" />
-
-                        </LinearLayout>
-
-                        <TextView
-                            android:id="@+id/answer_c_details"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginLeft="15dp"
-                            android:visibility="gone"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:textColor="@color/primaryTextColor" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <LinearLayout
-                            android:id="@+id/answer_d_layout"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginBottom="5dp"
-                            android:orientation="horizontal">
-
-
-                            <TextView
-                                android:id="@+id/answer_d_head"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textAppearance="?android:attr/textAppearanceLarge"
-                                android:textColor="@color/primaryColor"
-                                android:textStyle="bold"
-                                android:text="D" />
-
-                            <TextView
-                                android:id="@+id/answer_d_summary"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="5dp"
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textColor="@color/primaryTextColor"
-                                android:textStyle="bold"
-                                android:text="The answer is A." />
-
-                            <View
-                                android:layout_width="1dp"
-                                android:layout_height="match_parent"
-                                android:background="#fff" />
-                        </LinearLayout>
-
-                        <TextView
-                            android:id="@+id/answer_d_details"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginLeft="15dp"
-                            android:visibility="gone"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:textColor="@color/primaryTextColor" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/answer_a_details"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginLeft="15dp"
-                        android:visibility="gone"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textColor="@color/primaryTextColor" />
-                </LinearLayout>
-
-            </LinearLayout>
+                <Button
+                    android:id="@+id/submitButton"
+                    android:layout_width="270dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/radio_group_answers"
+                    app:layout_constraintVertical_bias=".5"
+                    android:shadowColor="#A8A8A8"
+                    android:shadowDx="0"
+                    android:shadowDy="0"
+                    android:shadowRadius="5"
+                    android:textColor="#000000"
+                    android:textSize="24sp"
+                    android:background="@drawable/submit_button_background"
+                    android:text="@string/submit_button" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
-
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+
+    <Button
+        android:id="@+id/newQuizBtn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:elevation="8dp"
-        app:cardBackgroundColor="@color/primaryColor"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="8dp">
+        android:layout_gravity="end|bottom"
+        android:textColor="@color/primaryTextColor"
+        android:background="@drawable/radio_bordered_background"
+        android:backgroundTint="@color/primaryLightColor"
+        android:text="@string/question_new_quiz" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/primaryColor">
-
-            <TextView
-                android:id="@+id/question"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:gravity="center_horizontal"
-                android:textAlignment="center"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/primaryTextColor"
-                android:textStyle="bold"
-                android:text="What Is An Activity?" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
 </LinearLayout>
