--- a/Interview_Prep_App/native_kotlin/base/src/main/res/layout/activity_main.xml
+++ b/Interview_Prep_App/native_kotlin/base/src/main/res/layout/activity_main.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nudennie.interviewprepapp.MainActivity"
-    android:background="#F5F4F4"
+    tools:context=".ui.main.MainActivity"
+    android:background="@color/secondaryDarkColor"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -16,51 +17,45 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         app:cardElevation="8dp"
-        app:cardCornerRadius="10dp"
-        app:cardBackgroundColor="@color/primaryColor">
-
+        app:cardCornerRadius="14dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@drawable/app_gradient">
 
             <TextView
-                android:gravity="center_horizontal"
+                android:id="@+id/title_tv"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="42dp"
+                android:gravity="center_horizontal"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/primaryTextColor"
+                android:textSize="24sp"
                 android:text="ANDROID QUIZ"
-                android:id="@+id/title_tv" />
-
+                android:textStyle="bold"/>
             <TextView
                 android:layout_margin="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/primaryTextColor"
+                android:textSize="24sp"
                 android:text="Score: "
                 android:id="@+id/score_tv"
-                android:gravity="center_horizontal" />
+                android:textStyle="bold"
+                android:gravity="center_horizontal"/>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-
-    <androidx.cardview.widget.CardView
-        android:layout_margin="8dp"
+    <LinearLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="#BEBEBE"
-        app:cardElevation="8dp"
-        app:cardCornerRadius="10dp">
-
-        <LinearLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" />
-    </androidx.cardview.widget.CardView>
-
+        android:layout_margin="8dp"
+        android:background="@drawable/secondary_gradient"
+        android:orientation="vertical"
+        android:elevation="8dp"/>
 
 </LinearLayout>
