--- a/Interview_Prep_App/native_kotlin/base/src/main/res/layout/activity_score.xml
+++ b/Interview_Prep_App/native_kotlin/base/src/main/res/layout/activity_score.xml
@@ -1,47 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScoreActivity"
+    tools:context=".ui.score.ScoreActivity"
     android:gravity="center"
     android:orientation="vertical"
     android:background="#fff">
 
     <androidx.cardview.widget.CardView
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        app:cardBackgroundColor="#000"
         android:elevation="8dp"
         app:cardElevation="8dp"
-        app:cardCornerRadius="6dp">
+        app:cardCornerRadius="14dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
+            android:background="@drawable/secondary_gradient"
             android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/finished_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/score_title"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textColor="@color/secondaryTextColor"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="28sp"
+                android:textStyle="bold"
+                android:text="@string/score_title" />
 
             <TextView
                 android:id="@+id/comment_tv"
-                android:layout_below="@id/finished_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="WHATEVER"
+                android:layout_below="@id/finished_tv"
                 android:layout_centerHorizontal="true"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
-
+                android:textColor="@color/secondaryTextColor"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:text="WHATEVER" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -62,13 +67,13 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:orientation="vertical">
-
                         <TextView
                             android:id="@+id/numofquestions_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/score_questions"
-                            android:textAppearance="?android:attr/textAppearanceLarge" />
+                            android:textColor="@color/secondaryTextColor"
+                            android:textAppearance="?android:attr/textAppearanceLarge"/>
 
                         <TextView
                             android:textStyle="bold"
@@ -76,8 +81,9 @@
                             android:id="@+id/numcorrect_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textColor="@color/secondaryTextColor"
                             android:text="@string/score_correct_answers"
-                            android:textAppearance="?android:attr/textAppearanceMedium" />
+                            android:textAppearance="?android:attr/textAppearanceMedium"/>
                     </LinearLayout>
 
                     <TextView
@@ -90,36 +96,48 @@
                         android:textSize="60dp"
                         android:textColor="#08f600"
                         android:layout_gravity="center_horizontal|bottom"
-                        android:gravity="center_horizontal|bottom" />
+                        android:gravity="center_horizontal|bottom"
+                        />
 
                 </LinearLayout>
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
+                    android:orientation="horizontal"
+                    >
                     <Button
+                        android:id="@+id/restart_button"
+                        android:background="@drawable/submit_button_background"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:textColor="#0cf022"
                         android:text="@string/new_quiz"
-                        android:onClick="startOver" />
+                        android:textStyle="bold"
+                        android:textSize="24sp"
+                        android:onClick="startOver"
+                        style="?android:attr/buttonBarButtonStyle"
+                        android:layout_margin="8dp"/>
 
                     <Button
+                        android:id="@+id/close_button"
+                        android:background="@drawable/submit_button_background"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/quit_app"
                         android:textColor="#eb0e0b"
-                        android:id="@+id/button"
-                        android:onClick="closeApp" />
+                        android:textStyle="bold"
+                        android:textSize="24sp"
+                        android:onClick="closeApp"
+                        style="?android:attr/buttonBarButtonStyle"
+                        android:layout_margin="8dp"/>
 
                 </LinearLayout>
 
 
             </LinearLayout>
+
 
 
         </RelativeLayout>
