Updated Libraries . Refactored files to hold better folder architecture.

--- a/Interview_Prep_App/native_kotlin/retrofit/src/main/res/layout/activity_score.xml
+++ b/Interview_Prep_App/native_kotlin/retrofit/src/main/res/layout/activity_score.xml
@@ -6,7 +6,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScoreActivity"
+    tools:context=".ui.score.ScoreActivity"
     android:gravity="center"
     android:orientation="vertical"
     android:background="#fff">
