Added Kotlin Template Application for users to copy to create their own.

--- a/Interview_Prep_App/sharedresources/src/main/res/values/colors.xml
+++ b/Interview_Prep_App/sharedresources/src/main/res/values/colors.xml
@@ -16,4 +16,7 @@
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+
 </resources>
