Added comments to the SplashScreen code

--- a/Interview_Prep_App/sharedresources/src/main/res/values/themes.xml
+++ b/Interview_Prep_App/sharedresources/src/main/res/values/themes.xml
@@ -13,7 +13,7 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-
+    <!--Theme for the SplashScreen Activity, must not have action bar to fully cover the screen-->
     <style name="SplashScreenTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
 
         <item name="colorPrimary">@color/primaryColor</item>
