add button margin

--- a/Interview_Prep_App/native_kotlin/clean-architecture/src/main/res/layout/fragment_quiz.xml
+++ b/Interview_Prep_App/native_kotlin/clean-architecture/src/main/res/layout/fragment_quiz.xml
@@ -212,6 +212,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
+            android:layout_margin="12dp"
             android:background="@drawable/radio_bordered_background"
             android:backgroundTint="@color/primaryLightColor"
             android:text="@string/question_new_quiz"
