--- a/Interview_Prep_App/native_java/retrofit/src/main/res/layout/activity_splash_screen.xml
+++ b/Interview_Prep_App/native_java/retrofit/src/main/res/layout/activity_splash_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/primaryLightColor"
     tools:context=".ui.main.SplashScreenActivity">
 
     <TextView
@@ -14,7 +14,7 @@
         android:fontFamily="sans-serif-medium"
         android:paddingBottom="8dp"
         android:text="@string/app_name"
-        android:textSize="36sp"
+        android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
