--- a/Interview_Prep_App/native_kotlin/base/src/main/res/layout/activity_splash_screen.xml
+++ b/Interview_Prep_App/native_kotlin/base/src/main/res/layout/activity_splash_screen.xml
@@ -16,6 +16,7 @@
         android:textColor="@color/light_blue_A200"
         android:textSize="40sp"
         android:textStyle="bold"
+        android:layout_margin="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
