--- a/Interview_Prep_App/native_java/javatemplate/src/main/res/layout/activity_splash_screen.xml
+++ b/Interview_Prep_App/native_java/javatemplate/src/main/res/layout/activity_splash_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primaryColor"
+    android:background="@color/white"
     tools:context=".ui.main.SplashScreenActivity">
 
     <TextView
@@ -12,9 +12,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
-        android:paddingBottom="8dp"
+        android:layout_margin="16dp"
+        android:autoSizeMaxTextSize="36sp"
+        android:autoSizeMinTextSize="16sp"
         android:text="@string/app_name"
-        android:textSize="36sp"
+        android:textSize="33sp"
+        android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
