--- a/Interview_Prep_App/native_kotlin/retrofit/src/main/res/layout/activity_splash_screen.xml
+++ b/Interview_Prep_App/native_kotlin/retrofit/src/main/res/layout/activity_splash_screen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.splash_screen.SplashScreenActivity"
@@ -13,7 +13,8 @@
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="240dp"
-        android:src="@drawable/splash_screen_logo" />
+        android:src="@drawable/splash_screen_logo"
+        android:contentDescription="splash icon" />
 
     <TextView
         android:id="@+id/txtSplash"
